--- a/style.css
+++ b/style.css
@@ -69,6 +69,17 @@ body {
   margin-top:30px;
 }
 
+.footer {
+  margin-top: 10px;
+  background-color: #000;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.footer span {
+  color: #ffffff;
+
+}
 
 
 
