--- a/style22.css
+++ b/style22.css
@@ -1,6 +1,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  position: relative;
 }
 
 .navbar-custom {
@@ -59,18 +60,17 @@ body {
   background-color: #000;
   color:#ffffff;
   text-align: justify;
+  padding: 50px 0;
 }
 
-#aboutUs img {
-  margin-top: 30px;
-}
+
 
 #contact {
   margin-top:30px;
 }
 
 .footer {
-  margin-top: 10px;
+  margin-top: 10px 0;
   background-color: #000;
   text-align: center;
   padding-top: 20px;
