--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,26 @@ body {
   height: 400px;
   background: url(../images/dark.jpg) no-repeat center center;
   background-size: cover;
-}
-
-.tlt {
-  text-align: center;
-  padding-top: 150px;
   color:#ffffff;
-  text-transform: uppercase;
+  padding-top: 130px;
+  text-align:center;
 }
 
+#header span {
+  font-family: 'Courgette', cursive;
+  color: #cb1bbf;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+#header h1{
+  padding-bottom: 5px;
+}
+
+
+#header h5 {
+  padding-top: 20px;
+  font-style: italic;
 
 }
 
@@ -60,7 +71,7 @@ body {
 
 
 #contact {
-  margin-top:30px;
+  margin:30px 0;
 }
 
 .footer {
