--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,10 @@
 body {
   font-family: 'Roboto', sans-serif;
   position: relative;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-right: -5px;
 }
-
-.navbar-custom {
-  margin-bottom: 0;
-
-}
-
 
 .logo {
   position: absolute;
