--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ body {
   font-size: 1.2em;
 }
 
+
+
 #header h1{
   padding-bottom: 5px;
 }
@@ -69,6 +71,10 @@ body {
 
 #contact {
   margin:30px 0;
+}
+
+.map iframe{
+    pointer-events: none;
 }
 
 .footer {
